--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -129,6 +129,9 @@ en:
       follow_the_link: "Follow the link inside this email to log into Teambox! If you can't find it, look in the spam folder."
       not_found: "The email <b>%{email}</b> doesn't belong to any Teambox user. Maybe you misspelt it?"
       change_password_now: "You are now logged in. <b>Choose a new password now</b> so you won't forget it!"
+    reset:
+      title: You can now reset your password
+      submit: Reset my password
   cards:
     card:
       phone_numbers: Phone Numbers
@@ -1124,6 +1127,10 @@ en:
   search:
     placeholder: "Search all projects"
     placeholder_in_project: "Search in project"
+    submit: Search
+    results:
+      search_again: Search again
+      report: '%{count} results found for "%{term}"'
 
   number:
     # Used in number_with_delimiter()
