--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -951,6 +951,8 @@ ja:
     sent: 
       email_sent: <b>このユーザーにプロジェクトへの招待を受け入れるリンクを含んだeメールを送信しました。もしeメールが見つからないようであれば、迷惑メールに分類されていないか確認するか、異なるeメールアドレスを試して見てください。もし問題が解決しないようでしたら、我々のスタッフに連絡してください。
   latest_announcement: "Teamboxに関する最新の情報は<a href='http://blog.teambox.com'>ブログ(英語)</a>でお読みになれます。日本語での提供は下半期を2010年秋頃を予定してます。 "
+  locales: 
+    ja: 日本語
   not_found: 
     conversation: "チャット %{id} はこのプロジェクトにはありません"
     group: "グループ %{id} は存在しません。"
