--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -805,6 +805,8 @@ ru:
     sent: 
       email_sent: "<b>Мы только что послали уведомление со ссылкой подтверждения этому пользователю with</b>. Если они не нашли письмо, проверьте, не упало ли оно в спам или попробуйте другой адрес электронной почты. Если проблема не исчезнет, свяжитесь с администрацией."
   latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
+  locales: 
+    ru: Русский
   not_found: 
     conversation: "Обсуждение %{id} не найдено в этом проекте."
     group: "Группа %{id} не существует."
